--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -21,6 +21,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.6版</td>
+<td>2016/04/08</td>
+<td>pg_stats_reporter 3.1, 3.2の記述を追加<br/>pg_stats_reporter 3.0の使用言語にCentOS 7の追加およびCentOS 6の最新化<br/>最新ライブラリ一覧の更新<br/>差分が多いため、バックグラウンドカラーの変更は最新版の一部のみ</td>
+</tr>
+<tr>
 <td>第1.5版</td>
 <td>2015/05/08</td>
 <td>最新ライブラリ一覧の更新<br/>RHEL 7.1対応</td>
@@ -33,12 +38,12 @@
 <tr>
 <td>第1.3版</td>
 <td>2014/11/04</td>
-<td>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS6.6の情報を追加</td>
+<td>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS 6.6の情報を追加</td>
 </tr>
 <tr>
 <td>第1.2版</td>
 <td>2014/10/15</td>
-<td>trunk版の情報を追加<br/>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS7の情報を追加<br/>pg_stats_reporter 2.0, 3.0のjQueryの備考に、jquery-migrate-1.2.1.jsを使用している旨を追記</td>
+<td>trunk版の情報を追加<br/>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS 7の情報を追加<br/>pg_stats_reporter 2.0, 3.0のjQueryの備考に、jquery-migrate-1.2.1.jsを使用している旨を追記</td>
 </tr>
 <tr>
 <td>第1.1版</td>
@@ -55,8 +60,10 @@
 
 <h2>目次</h2>
 <ul>
-<li><a href="#now">2015/05/08時点最新版</a></li>
+<li><a href="#now">2016/04/08時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
+<li><a href="#32">pg_stats_reporter 3.2</a></li>
+<li><a href="#31">pg_stats_reporter 3.1</a></li>
 <li><a href="#30">pg_stats_reporter 3.0</a></li>
 <li><a href="#20">pg_stats_reporter 2.0</a></li>
 <li><a href="#10">pg_stats_reporter 1.0</a></li>
@@ -64,7 +71,7 @@
 
 <br/><hr/>
 
-<h2 id="now">【2015/05/08時点最新版】</h2>
+<h2 id="now">【2016/04/08時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -78,112 +85,103 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="30">PHP</td>
+<td rowspan="33">PHP</td>
 <td rowspan="10">5.3.3</td>
-<td bgcolor="white">php-5.3.3-40.el6</td>
-<td rowspan="5" bgcolor="white">CentOS 6.6<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.3.3-46.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.7<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="white">php-cli-5.3.3-40.el6</td>
+<td bgcolor="white">php-cli-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-common-5.3.3-40.el6</td>
+<td bgcolor="white">php-common-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-pgsql-5.3.3-40.el6</td>
+<td bgcolor="white">php-pgsql-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-intl-5.3.3-40.el6</td>
+<td bgcolor="white">php-intl-5.3.3-46.el6</td>
 </tr>
 
 <tr>
 <td>php-5.3.3-38.el6</td>
-<td rowspan="5">CentOS 6.6<br/>インストール媒体版</td>
+<td rowspan="5">CentOS 6.7<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td>php-cli-5.3.3-38.el6</td>
+<td>php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-common-5.3.3-38.el6</td>
+<td>php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.3.3-38.el6</td>
+<td>php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.3.3-38.el6</td>
+<td>php-intl-5.3.3-40.el6</td>
 </tr>
 
 <tr>
-<td rowspan="10">5.4.16</td>
-<td bgcolor="white">php-5.4.16-23.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>yum updateした最新版</td>
+<td rowspan="5">5.4.16</td>
+<td bgcolor="white">php-5.4.16-36.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1511(7.2)<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td bgcolor="white">php-cli-5.4.16-23.el7</td>
+<td bgcolor="white">php-cli-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="white">php-common-5.4.16-23.el7</td>
+<td bgcolor="white">php-common-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="white">php-pgsql-5.4.16-23.el7</td>
+<td bgcolor="white">php-pgsql-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="white">php-intl-5.4.16-23.el7</td>
+<td bgcolor="white">php-intl-5.4.16-36.el7</td>
 </tr>
 
 <tr>
-<td bgcolor="cyan">php-5.4.16-23.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>インストール媒体版</td>
+<td rowspan="5" bgcolor="white">5.5.24</td>
+<td bgcolor="white">php-5.5.24-1.el6</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.4.16-23.el7</td>
+<td bgcolor="white">php-cli-5.5.24-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.4.16-23.el7</td>
+<td bgcolor="white">php-common-5.5.24-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-23.el7</td>
+<td bgcolor="white">php-pgsql-5.5.24-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.4.16-23.el7</td>
+<td bgcolor="white">php-intl-5.5.24-1.el6</td>
 </tr>
 
 <tr>
-<td rowspan="5" bgcolor="cyan">5.5.24</td>
-<td bgcolor="cyan">php-5.5.24-1.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+<td rowspan="5" bgcolor="white">5.6.8</td>
+<td bgcolor="white">php-5.6.8-1.el6</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用<br/>pg_stats_reporter動作未確認</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.5.24-1.el6</td>
+<td bgcolor="white">php-cli-5.6.8-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.5.24-1.el6</td>
+<td bgcolor="white">php-common-5.6.8-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.5.24-1.el6</td>
+<td bgcolor="white">php-pgsql-5.6.8-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.5.24-1.el6</td>
-</tr>
-
-<tr>
-<td rowspan="5" bgcolor="cyan">5.6.8</td>
-<td bgcolor="cyan">php-5.6.8-1.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用<br/>pg_stats_reporter動作未確認</td>
+<td bgcolor="white">php-intl-5.6.8-1.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.6.8-1.el6</td>
+<td>5.5.34</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.6.8-1.el6</td>
+<td>5.6.20</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.6.8-1.el6</td>
+<td>7.0.5</td>
 </tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.6.8-1.el6</td>
-</tr>
-
 </tbody>
 <tfoot><tr><td colspan="4">
 ※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
@@ -205,19 +203,19 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">2.1.4</td>
+<td bgcolor="cyan">2.2.3</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>jqPlot</td>
-<td bgcolor="white">1.0.8r1250</td>
+<td bgcolor="cyan">1.0.9</td>
 <td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="white">3.1.21</td>
+<td bgcolor="cyan">3.1.29</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
@@ -229,25 +227,25 @@
 </tr>
 <tr>
 <td>dygraphs</td>
-<td bgcolor="white">1.1.0</td>
+<td bgcolor="cyan">1.1.1</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>リリース版は1ファイル(dygraph-combined.js)の模様</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.4</td>
+<td bgcolor="white">1.11.4</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td bgcolor="cyan">1.5.3</td>
+<td bgcolor="cyan">1.6.1</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="white">1.7.5</td>
+<td bgcolor="cyan">1.7.8</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td></td>
 </tr>
@@ -275,78 +273,61 @@
 <tr>
 <td rowspan="25">PHP</td>
 <td rowspan="10">5.3.3</td>
-<td bgcolor="white">php-5.3.3-40.el6</td>
-<td rowspan="5" bgcolor="white">CentOS 6.6<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.3.3-46.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.7<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="white">php-cli-5.3.3-40.el6</td>
+<td bgcolor="white">php-cli-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-common-5.3.3-40.el6</td>
+<td bgcolor="white">php-common-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-pgsql-5.3.3-40.el6</td>
+<td bgcolor="white">php-pgsql-5.3.3-46.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-intl-5.3.3-40.el6</td>
-</tr>
-
-<tr>
-<td>php-5.3.3-38.el6</td>
-<td rowspan="5">CentOS 6.6<br/>インストール媒体版</td>
-</tr>
-<tr>
-<td>php-cli-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td>php-common-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td>php-pgsql-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td>php-intl-5.3.3-38.el6</td>
+<td bgcolor="white">php-intl-5.3.3-46.el6</td>
 </tr>
 
 <tr>
-<td rowspan="10">5.4.16</td>
-<td bgcolor="white">php-5.4.16-23.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>yum updateした最新版</td>
+<td>php-5.3.3-40.el6</td>
+<td rowspan="5">CentOS 6.7<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td bgcolor="white">php-cli-5.4.16-23.el7</td>
+<td>php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-common-5.4.16-23.el7</td>
+<td>php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-pgsql-5.4.16-23.el7</td>
+<td>php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="white">php-intl-5.4.16-23.el7</td>
+<td>php-intl-5.3.3-40.el6</td>
 </tr>
 
 <tr>
-<td bgcolor="cyan">php-5.4.16-23.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>インストール媒体版</td>
+<td rowspan="5">5.4.16</td>
+<td bgcolor="white">php-5.4.16-36.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1511(7.2)<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.4.16-23.el7</td>
+<td bgcolor="white">php-cli-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.4.16-23.el7</td>
+<td bgcolor="white">php-common-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-23.el7</td>
+<td bgcolor="white">php-pgsql-5.4.16-36.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.4.16-23.el7</td>
+<td bgcolor="white">php-intl-5.4.16-36.el7</td>
 </tr>
 
 <tr>
 <td rowspan="5" bgcolor="white">5.5.22</td>
 <td bgcolor="white">php-5.5.22-1.el6</td>
-<td rowspan="5" bgcolor="white">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
 </tr>
 <tr>
 <td bgcolor="white">php-cli-5.5.22-1.el6</td>
@@ -385,7 +366,7 @@
 <td>jQuery</td>
 <td bgcolor="white">2.1.3</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
-<td>jquery-2.1.1.min.js</td>
+<td>jquery-2.1.3.min.js</td>
 <td></td>
 </tr>
 <tr>
@@ -399,7 +380,345 @@
 <td>Smarty</td>
 <td bgcolor="white">3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
-<td>Smarty-3.1.20.tar.gz</td>
+<td>Smarty-3.1.21.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>tablesorter</td>
+<td bgcolor="white">2.17.8</td>
+<td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
+<td>Mottie-tablesorter-v2.17.8-0-g08bf513.zip</td>
+<td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
+</tr>
+<tr>
+<td>dygraphs JavaScript Visualization Library</td>
+<td bgcolor="white">1.1.0</td>
+<td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
+<td>dygraphs-combined.js</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>jQuery UI</td>
+<td bgcolor="white">1.11.3</td>
+<td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
+<td>jquery-ui-1.11.1.custom.zip</td>
+<td></td>
+</tr>
+<tr>
+<td>jquery-ui-timepicker-addon.js</td>
+<td bgcolor="white">1.5.0</td>
+<td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
+<td>jquery-ui-timepicker-addon.js</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>Superfish</td>
+<td bgcolor="white">1.7.5</td>
+<td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
+<td>superfish-master.zip</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+</tbody>
+<tfoot><tr><td colspan="5">
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+
+<br/><hr/>
+
+<h2 id="32">【pg_stats_reporter 3.2】</h2>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="4">使用言語</th></tr>
+<tr>
+<th>言語</th>
+<th>バージョン</th>
+<th>試験時使用パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="25">PHP</td>
+<td rowspan="10">5.3.3</td>
+<td bgcolor="white">php-5.3.3-46.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.7<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.3.3-46.el6</td>
+</tr>
+
+<tr>
+<td>php-5.3.3-40.el6</td>
+<td rowspan="5">CentOS 6.7<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td>php-cli-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-common-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-pgsql-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-intl-5.3.3-40.el6</td>
+</tr>
+
+<tr>
+<td rowspan="5">5.4.16</td>
+<td bgcolor="white">php-5.4.16-36.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1511(7.2)<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-36.el7</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="white">5.5.22</td>
+<td bgcolor="white">php-5.5.22-1.el6</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.5.22-1.el6</td>
+</tr>
+
+</tbody>
+<tfoot><tr><td colspan="4">
+※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+<br/>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="5">使用ライブラリ</th></tr>
+<tr>
+<th>ライブラリ</th>
+<th>バージョン</th>
+<th>URL</th>
+<th>パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>jQuery</td>
+<td bgcolor="white">2.1.3</td>
+<td><a href="http://jquery.com/">http://jquery.com/</a></td>
+<td>jquery-2.1.3.min.js</td>
+<td></td>
+</tr>
+<tr>
+<td>jqPlot</td>
+<td bgcolor="white">1.0.8r1250</td>
+<td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
+<td>jquery.jqplot.1.0.8r1250.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>Smarty</td>
+<td bgcolor="white">3.1.21</td>
+<td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
+<td>Smarty-3.1.21.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>tablesorter</td>
+<td bgcolor="white">2.17.8</td>
+<td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
+<td>Mottie-tablesorter-v2.17.8-0-g08bf513.zip</td>
+<td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
+</tr>
+<tr>
+<td>dygraphs JavaScript Visualization Library</td>
+<td bgcolor="white">1.1.0</td>
+<td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
+<td>dygraphs-combined.js</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>jQuery UI</td>
+<td bgcolor="white">1.11.3</td>
+<td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
+<td>jquery-ui-1.11.1.custom.zip</td>
+<td></td>
+</tr>
+<tr>
+<td>jquery-ui-timepicker-addon.js</td>
+<td bgcolor="white">1.5.0</td>
+<td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
+<td>jquery-ui-timepicker-addon.js</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>Superfish</td>
+<td bgcolor="white">1.7.5</td>
+<td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
+<td>superfish-master.zip</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+</tbody>
+<tfoot><tr><td colspan="5">
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+
+<br/><hr/>
+
+<h2 id="31">【pg_stats_reporter 3.1】</h2>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="4">使用言語</th></tr>
+<tr>
+<th>言語</th>
+<th>バージョン</th>
+<th>試験時使用パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="25">PHP</td>
+<td rowspan="10">5.3.3</td>
+<td bgcolor="white">php-5.3.3-46.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.7<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.3.3-46.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.3.3-46.el6</td>
+</tr>
+
+<tr>
+<td>php-5.3.3-40.el6</td>
+<td rowspan="5">CentOS 6.7<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td>php-cli-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-common-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-pgsql-5.3.3-40.el6</td>
+</tr>
+<tr>
+<td>php-intl-5.3.3-40.el6</td>
+</tr>
+
+<tr>
+<td rowspan="5">5.4.16</td>
+<td bgcolor="white">php-5.4.16-36.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1511(7.2)<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-36.el7</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="white">5.5.22</td>
+<td bgcolor="white">php-5.5.22-1.el6</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.5.22-1.el6</td>
+</tr>
+
+</tbody>
+<tfoot><tr><td colspan="4">
+※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+<br/>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="5">使用ライブラリ</th></tr>
+<tr>
+<th>ライブラリ</th>
+<th>バージョン</th>
+<th>URL</th>
+<th>パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>jQuery</td>
+<td bgcolor="white">2.1.3</td>
+<td><a href="http://jquery.com/">http://jquery.com/</a></td>
+<td>jquery-2.1.3.min.js</td>
+<td></td>
+</tr>
+<tr>
+<td>jqPlot</td>
+<td bgcolor="white">1.0.8r1250</td>
+<td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
+<td>jquery.jqplot.1.0.8r1250.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>Smarty</td>
+<td bgcolor="white">3.1.21</td>
+<td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
+<td>Smarty-3.1.21.tar.gz</td>
 <td></td>
 </tr>
 <tr>
@@ -459,7 +778,7 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="10">PHP</td>
+<td rowspan="15">PHP</td>
 <td rowspan="10">5.3.3</td>
 <td>php53-5.3.3-5.el5</td>
 <td rowspan="5">CentOS 5.8同梱版</td>
@@ -479,24 +798,42 @@
 
 <tr>
 <td>php-5.3.3-26.el6</td>
-<td rowspan="5">CentOS 6.5同梱版</td>
+<td rowspan="5">CentOS 6.7同梱版</td>
 </tr>
 <tr>
-<td>php-cli-5.3.3-26.el6</td>
+<td>php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-common-5.3.3-26.el6</td>
+<td>php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.3.3-26.el6</td>
+<td>php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.3.3-26.el6</td>
+<td>php-intl-5.3.3-40.el6</td>
+</tr>
+
+<tr>
+<td rowspan="5">5.4.16</td>
+<td>php-5.4.16-36.el7</td>
+<td rowspan="5">CentOS 7 1511(7.2)同梱版</td>
+</tr>
+<tr>
+<td>php-cli-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td>php-common-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td>php-pgsql-5.4.16-36.el7</td>
+</tr>
+<tr>
+<td>php-intl-5.4.16-36.el7</td>
 </tr>
 
 </tbody>
 <tfoot><tr><td colspan="4">
-※ php-intlは、インストールディスクの2にあるため注意
+※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意
 </td></tr></tfoot>
 </table>
 <br/>
