--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -9,7 +9,22 @@
 <body>
 <h1>pg_stats_reporter 使用言語・ライブラリ一覧</h1>
 
-<h2>変更履歴</h2>
+<h2>目次</h2>
+<ul>
+<li><a href="#change">変更履歴</a></li>
+<li><a href="#now">2017/09/05時点最新版</a></li>
+<li><a href="#trunk">pg_stats_reporter trunk</a></li>
+<li><a href="#33">pg_stats_reporter 3.3</a></li>
+<li><a href="#32">pg_stats_reporter 3.2</a></li>
+<li><a href="#31">pg_stats_reporter 3.1</a></li>
+<li><a href="#30">pg_stats_reporter 3.0</a></li>
+<li><a href="#20">pg_stats_reporter 2.0</a></li>
+<li><a href="#10">pg_stats_reporter 1.0</a></li>
+</ul>
+
+<br/><hr/>
+
+<h2 id="change">変更履歴</h2>
 
 <table border="1">
 <thead>
@@ -20,6 +35,16 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>第1.9版</td>
+<td>2017/09/11</td>
+<td>pg_stats_reporter 3.3の記述を追加</td>
+</tr>
+<tr>
+<td>第1.8版</td>
+<td>2017/09/05</td>
+<td>2017/09/05時点最新版の更新</td>
+</tr>
 <tr>
 <td>第1.7版</td>
 <td>2017/05/17</td>
@@ -63,20 +88,9 @@
 </tbody>
 </table>
 
-<h2>目次</h2>
-<ul>
-<li><a href="#now">2017/05/17時点最新版</a></li>
-<li><a href="#trunk">pg_stats_reporter trunk</a></li>
-<li><a href="#32">pg_stats_reporter 3.2</a></li>
-<li><a href="#31">pg_stats_reporter 3.1</a></li>
-<li><a href="#30">pg_stats_reporter 3.0</a></li>
-<li><a href="#20">pg_stats_reporter 2.0</a></li>
-<li><a href="#10">pg_stats_reporter 1.0</a></li>
-</ul>
-
 <br/><hr/>
 
-<h2 id="now">【2017/05/17時点最新版】</h2>
+<h2 id="now">【2017/09/05時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -196,13 +210,13 @@
 <td bgcolor="white">php-intl-5.6.8-1.el6</td>
 </tr>
 <tr>
-<td>7.1.5</td><td rowspan="4" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+<td bgcolor="white">7.1.9</td><td rowspan="4" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
 <tr>
-<td>7.0.19</td>
+<td bgcolor="white">7.0.23</td>
 </tr>
 <tr>
-<td>5.6.30</td>
+<td bgcolor="white">5.6.31</td>
 </tr>
 <tr>
 <td>5.5.38</td>
@@ -227,7 +241,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.2.1</td>
+<td bgcolor="white">3.2.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
@@ -239,38 +253,38 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.30</td>
+<td bgcolor="white">3.1.30</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.28.10</td>
-<td bgcolor="cyan"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
+<td bgcolor="white">2.28.15</td>
+<td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
 <tr>
 <td>dygraphs</td>
-<td bgcolor="cyan">2.0.0</td>
+<td bgcolor="white">2.0.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
-<td bgcolor="cyan">リリースはバラバラに3つのファイル(dygraph.js, dygraph.min.js, dygraph.css)となっている</td>
+<td bgcolor="white">リリースはバラバラに3つのファイル(dygraph.js, dygraph.min.js, dygraph.css)となっている</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.12.1</td>
+<td bgcolor="white">1.12.1</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
-<td bgcolor="cyan">ダウンロード時に指定するthemeはstart</td>
+<td bgcolor="white">ダウンロード時に指定するthemeはstart</td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td bgcolor="cyan">1.6.3</td>
+<td bgcolor="white">1.6.3</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
-<td bgcolor="cyan">cssファイルが追加になっている</td>
+<td bgcolor="white">cssファイルが追加になっている</td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.9</td>
-<td bgcolor="cyan"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
+<td bgcolor="white">1.7.9</td>
+<td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
 <td></td>
 </tr>
 </tbody>
@@ -404,9 +418,9 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.2.1</td>
+<td bgcolor="white">3.2.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
-<td bgcolor="cyan">jquery-3.2.1.min.js</td>
+<td bgcolor="white">jquery-3.2.1.min.js</td>
 <td></td>
 </tr>
 <tr>
@@ -418,43 +432,228 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.30</td>
+<td bgcolor="white">3.1.30</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
-<td bgcolor="cyan">Smarty-3.1.30.tar.gz</td>
+<td bgcolor="white">Smarty-3.1.30.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.28.10</td>
-<td bgcolor="cyan"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
-<td bgcolor="cyan">tablesorter-2.28.10.tar.gz</td>
+<td bgcolor="white">2.28.10</td>
+<td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
+<td bgcolor="white">tablesorter-2.28.10.tar.gz</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
 </tr>
 <tr>
 <td>dygraphs JavaScript Visualization Library</td>
-<td bgcolor="cyan">2.0.0</td>
+<td bgcolor="white">2.0.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
-<td bgcolor="cyan">dygraph.js, dygraph.min.js, dygraph.css</td>
+<td bgcolor="white">dygraph.js, dygraph.min.js, dygraph.css</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.12.1</td>
+<td bgcolor="white">1.12.1</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
-<td bgcolor="cyan">jquery-ui-1.12.1.custom.zip</td>
+<td bgcolor="white">jquery-ui-1.12.1.custom.zip</td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td bgcolor="cyan">1.6.3</td>
+<td bgcolor="white">1.6.3</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
-<td bgcolor="cyan">jquery-ui-timepicker-addon.js, jquery-ui-timepicker-addon.css</td>
+<td bgcolor="white">jquery-ui-timepicker-addon.js, jquery-ui-timepicker-addon.css</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.9</td>
-<td bgcolor="cyan"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
+<td bgcolor="white">1.7.9</td>
+<td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
+<td>superfish-master.zip</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+</tbody>
+<tfoot><tr><td colspan="5">
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+
+<br/><hr/>
+
+<h2 id="33">【pg_stats_reporter 3.3】</h2>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="4">使用言語</th></tr>
+<tr>
+<th>言語</th>
+<th>バージョン</th>
+<th>試験時使用パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="30">PHP</td>
+<td rowspan="10">5.3.3</td>
+<td bgcolor="white">php-5.3.3-49.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.9<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.3.3-49.el6</td>
+</tr>
+
+<tr>
+<td>php-5.3.3-49.el6</td>
+<td rowspan="5">最新版未確認<br/>CentOS 6.9<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td>php-cli-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td>php-common-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td>php-pgsql-5.3.3-49.el6</td>
+</tr>
+<tr>
+<td>php-intl-5.3.3-49.el6</td>
+</tr>
+
+<tr>
+<td rowspan="10">5.4.16</td>
+<td bgcolor="white">php-5.4.16-42.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1611(7.3)<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-42.el7</td>
+</tr>
+
+<tr>
+<td bgcolor="white">php-5.4.16-42.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1611(7.3)<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-42.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-42.el7</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="white">5.5.22</td>
+<td bgcolor="white">php-5.5.22-1.el6</td>
+<td rowspan="5" bgcolor="white">最新版未確認<br/>CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.5.22-1.el6</td>
+</tr>
+
+</tbody>
+<tfoot><tr><td colspan="4">
+※ CentOS 6では、php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意
+</td></tr></tfoot>
+</table>
+<br/>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="5">使用ライブラリ</th></tr>
+<tr>
+<th>ライブラリ</th>
+<th>バージョン</th>
+<th>URL</th>
+<th>パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>jQuery</td>
+<td bgcolor="white">3.2.1</td>
+<td><a href="http://jquery.com/">http://jquery.com/</a></td>
+<td bgcolor="white">jquery-3.2.1.min.js</td>
+<td></td>
+</tr>
+<tr>
+<td>jqPlot</td>
+<td bgcolor="white">1.0.8r1250</td>
+<td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
+<td>jquery.jqplot.1.0.8r1250.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>Smarty</td>
+<td bgcolor="white">3.1.30</td>
+<td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
+<td bgcolor="white">Smarty-3.1.30.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>tablesorter</td>
+<td bgcolor="white">2.28.15</td>
+<td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
+<td bgcolor="white">tablesorter-2.28.15.tar.gz</td>
+<td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
+</tr>
+<tr>
+<td>dygraphs JavaScript Visualization Library</td>
+<td bgcolor="white">2.0.0</td>
+<td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
+<td bgcolor="white">dygraph.js, dygraph.min.js, dygraph.css</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>jQuery UI</td>
+<td bgcolor="white">1.12.1</td>
+<td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
+<td bgcolor="white">jquery-ui-1.12.1.custom.zip</td>
+<td></td>
+</tr>
+<tr>
+<td>jquery-ui-timepicker-addon.js</td>
+<td bgcolor="white">1.6.3</td>
+<td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
+<td bgcolor="white">jquery-ui-timepicker-addon.js, jquery-ui-timepicker-addon.css</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>Superfish</td>
+<td bgcolor="white">1.7.9</td>
+<td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
 <td>superfish-master.zip</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
